syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "Protos/V1/Models/SettingsModels.proto";

package daisi.protos.v1;

message Command{
	string Name = 1;
	optional google.protobuf.StringValue Message = 2;
	optional google.protobuf.Any Payload = 3;
	optional google.protobuf.StringValue SessionId = 4;
	optional google.protobuf.StringValue RequestId = 5;
}

message CommandParameter{
	string Key = 1;
	string Value = 2;
}

message HeartbeatRequest {
	Settings Settings = 1;
}

message EnvironmentRequest{
	string OperatingSystem = 1;
	string OperatingSystemVersion = 2;
	string AppVersion = 3;
}

message UpdateRequiredRequest{
	optional google.protobuf.StringValue HostAppUrl = 1;
	optional google.protobuf.StringValue Channel = 2;
}

message MoveOrcRequest{
	string Domain = 1;
	int32 Port = 2;
	bool UseSSL = 3;
}

message ShowMessageRequest {
	string Id = 1;
	repeated MessagePart Parts = 2; 
}

message ShowMessageResponse {
	string Id = 1;
	repeated MessagePartResponse Parts = 2;
}
message CancelStreamRequest{
}
message MessagePart {
	string Name = 1;
	string Label = 2;
	repeated google.protobuf.StringValue Values = 3;
	string Type = 4;
	bool Optional = 5;
}
message MessagePartResponse {
	string Name = 1;
	repeated google.protobuf.StringValue Values = 2;
}

message VectorDbAssignRequest {
    string AccountId = 1;
    repeated string FileIds = 2;
}

message VectorDbReleaseRequest {
    string AccountId = 1;
}

message PeerShardTransferRequest {
    string ShardId = 1;
    string TargetHostIp = 2;
    int32 TargetHostPort = 3;
}

message ExecuteToolRequest {
    string ToolId = 1;
    repeated ToolParam Parameters = 2;
    string RequestingHostId = 3;
    string SessionId = 4;
    string RequestId = 5;
}

message ToolParam {
    string Name = 1;
    string Value = 2;
}

message ExecuteToolResponse {
    bool Success = 1;
    string Output = 2;
    string ErrorMessage = 3;
    string OutputMessage = 4;
    string OutputFormat = 5;
}

message DownloadModelRequest {
    AIModel Model = 1;
}

message DownloadModelResponse {
    bool Success = 1;
    string ErrorMessage = 2;
}

message RemoveModelRequest {
    string ModelId = 1;
    string ModelName = 2;
    string FileName = 3;
}

message RemoveModelResponse {
    bool Success = 1;
    string ErrorMessage = 2;
}

// MCP Sync commands (sent from ORC to Host)
message McpSyncRequest {
    string AccountId = 1;
    string ServerId = 2;
    string ServerUrl = 3;
    string AuthType = 4;
    string AuthSecret = 5;
    string RepositoryId = 6;
    string CreatedByUserId = 7;
    repeated McpEnabledResource EnabledResources = 8;
}

message McpEnabledResource {
    string Uri = 1;
    string Name = 2;
    string MimeType = 3;
}

message McpSyncResponse {
    string ServerId = 1;
    bool Success = 2;
    string Error = 3;
    int32 ResourcesSynced = 4;
    repeated McpSyncDiscoveredResource DiscoveredResources = 5;
}

message McpSyncDiscoveredResource {
    string Uri = 1;
    string Name = 2;
    string MimeType = 3;
    string Description = 4;
}